--- a/index.html
+++ b/index.html
@@ -1,128 +1,189 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
-  <link rel="stylesheet" href="./main.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WEIXCE DESIGN</title>
+    <link rel="stylesheet" href="./app.css" />
 </head>
 
 <body>
-  <header class="site-header">
-    <div class="container">
-      <nav class="site-nav">
-        <div class="burger-menu">
-          <img src="./images/burger-menu.svg" alt="">
-        </div>
-        <div class="main-logo">
-          <img src="./images/logo.svg" alt="" class="logo">
-        </div>
-        <div class="header-nav--btn">
-          <button class="header-nav-button">
-            ХОЧУ ДИЗАЙН
-          </button>
-        </div>
-      </nav>
-    </div>
-  </header>
 
-  <main class="main">
-    <section class="hero">
-      <div class="container">
-        <img src="./images/header-main-img.svg" alt="Главное изображение" class="hero__image">
-        <div class="hero__content">
-          <h2 class="hero__title">DESIGN</h2>
-          <p class="hero__subtitle">
-            НОВЕЙШАЯ СТУДИЯ ДИЗАЙНА ВЕБ САЙТОВ И ПРИЛОЖЕНИЙ
-          </p>
+    <header class="site-header">
+        <div class="header-container">
+            <button class="menu-toggle" aria-label="Open menu">
+                <img src="./images/burger-menu.svg" alt="Menu Icon">
+            </button>
+            <a href="./app.html" class="logo">
+
+            </a>
+            <a href="#section-footer" class="btn btn-primary header-cta">ХОЧУ ДИЗАЙН</a>
         </div>
-      </div>
-    </section>
-    <section class="web-design">
-      <nav class="web-design__nav">
-        <button class="web-design__tab">FONT DESIGN</button>
-        <button class="web-design__tab">WEB APP DESIGN</button>
-        <button class="web-design__tab web-design__tab--active">WEB-DESIGN</button>
-        <button class="web-design__tab">MOBILE DESIGN</button>
-        <button class="web-design__tab">GAME DESIGN</button>
-      </nav>
+    </header>
 
-      <div class="web-design__content">
-        <h1 class="web-design__title">WEB DESIGN</h1>
-        <h2 class="web-design__subtitle">ЭТАПЫ РАБОТЫ:</h2>
-
-        <div class="web-design__steps">
-
-          <div class="step">
-            <div class="step__number">1</div>
-            <div class="step__content">
-              <h3 class="step__title">АНАЛИЗ АУДИТОРИИ И ТЗ</h3>
-              <p class="step__text">
-                ИССЛЕДОВАНИЕ ЦЕЛЕВОЙ АУДИТОРИИ И СОЗДАНИЕ ТЕХНИЧЕСКОГО ЗАДАНИЯ<br>
-                ЦЕНА: <span class="step__price">500 RUB</span>
-              </p>
+    <section id="section-hero" class="hero-section">
+        <div class="container hero-container">
+            <div class="hero-title-wrapper">
+                <h1 class="hero-title">WEIXCE</h1>
+                <img src="/page/21deb2d0-cebf-44f7-9812-fc2f9168f64c/images/51e6dacfe11c01812f22715a4122dfdec9e2fd34.png"
+                    alt="Eagle illustration" class="hero-image">
             </div>
-          </div>
-
-          <div class="step">
-            <div class="step__number">2</div>
-            <div class="step__content">
-              <h3 class="step__title">ПРОТОТИПИРОВАНИЕ</h3>
-              <p class="step__text">
-                СОЗДАНИЕ ИНТЕРАКТИВНЫХ ПРОТОТИПОВ БУДУЩЕГО САЙТА<br>
-                ЦЕНА: <span class="step__price">1 500 RUB</span>
-              </p>
+            <div class="hero-subtitle-wrapper">
+                <p class="hero-subtitle-design">DESIGN</p>
+                <p class="hero-description">НОВЕЙШАЯ СТУДИЯ ДИЗАЙНА ВЕБ САЙТОВ И ПРИЛОЖЕНИЙ</p>
             </div>
-            <div class="step__action">
-              <button class="step__next-btn">
-                ДАЛЬШЕ
-                <img src="icon.svg" alt="Arrow" width="18" height="18">
-              </button>
-            </div>
-          </div>
-
-          <div class="step">
-            <div class="step__number">3</div>
-            <div class="step__content">
-              <h3 class="step__title">ГОТОВЫЙ ДИЗАЙН</h3>
-              <p class="step__text">
-                РАЗРАБОТКА ПОЛНОГО ДИЗАЙНА САЙТА ПО УТВЕРЖДЁННОМУ ПРОТОТИПУ<br>
-                ЦЕНА: <span class="step__price">3 000 RUB</span> — ЗА 3 СТРАНИЦЫ<br>
-                КАЖДАЯ СЛЕДУЮЩАЯ: <span class="step__price">+1 000 RUB</span>
-              </p>
-            </div>
-          </div>
-
-          <div class="step">
-            <div class="step__number">4</div>
-            <div class="step__content">
-              <h3 class="step__title">АДАПТАЦИЯ И ПРАВКИ</h3>
-              <p class="step__text">
-                ДОРАБОТКА ДИЗАЙНА И АДАПТАЦИЯ ПОД РАЗНЫЕ УСТРОЙСТВА<br>
-                БЕСПЛАТНЫЕ 5 ПРАВОК
-              </p>
-            </div>
-          </div>
-
         </div>
-
-        <div class="web-design__footer">
-          <p class="web-design__footer-text">ЗАКЛЮЧИМ ОФИЦИАЛЬНЫЙ ДОГОВОР</p>
-          <button class="web-design__cta">ОБСУДИМ?</button>
-          <p class="web-design__footer-text">ПРОВЕДЁМ БЕСПЛАТНЫЙ АУДИТ</p>
-        </div>
-      </div>
     </section>
 
-  </main>
+    <section id="section-services" class="services-section">
+        <div class="container services-container">
+            <nav class="service-tags">
+                <a href="#" class="btn btn-secondary">FONT DESIGN</a>
+                <a href="#" class="btn btn-secondary">WEB APP DESIGN</a>
+                <a href="#" class="btn btn-primary">WEB-DESIGN</a>
+                <a href="#" class="btn btn-secondary">MOBILE DESIGN</a>
+                <a href="#" class="btn btn-secondary">GAME DESIGN</a>
+            </nav>
 
+            <div class="web-design-content">
+                <h2 class="services-title">WEB DESIGN</h2>
+                <div class="work-stages-wrapper">
+                    <div class="work-stages">
+                        <h3>ЭТАПЫ РАБОТЫ:</h3>
+                        <ol class="stages-list">
+                            <li class="stage-item">
+                                <div class="stage-number">1</div>
+                                <div class="stage-details">
+                                    <h4>АНАЛИЗ АУДИТОРИИ И ТЗ</h4>
+                                    <p>ИССЛЕДОВАНИЕ ЦЕЛЕВОЙ АУДИТОРИИ И СОЗДАНИЕ ТЕХНИЧЕСКОГО ЗАДАНИЯ ЦЕНА: 500 RUB</p>
+                                </div>
+                            </li>
+                            <li class="stage-item">
+                                <div class="stage-number">2</div>
+                                <div class="stage-details">
+                                    <h4>ПРОТОТИПИРОВАНИЕ</h4>
+                                    <p>СОЗДАНИЕ ИНТЕРАКТИВНЫХ ПРОТОТИПОВ БУДУЩЕГО САЙТА ЦЕНА: 1 500 RUB</p>
+                                </div>
+                            </li>
+                            <li class="stage-item">
+                                <div class="stage-number">3</div>
+                                <div class="stage-details">
+                                    <h4>ГОТОВЫЙ ДИЗАЙН</h4>
+                                    <p>РАЗРАБОТКА ПОЛНОГО ДИЗАЙНА САЙТА ПО УТВЕРЖДЁННОМУ ПРОТОТИПУ ЦЕНА: 3 000 RUB - ЗА
+                                        3 СТРАНИЦЫ КАЖДАЯ СЛЕДУЮЩАЯ СТРАНИЦА: + 1 000 RUB</p>
+                                </div>
+                            </li>
+                            <li class="stage-item">
+                                <div class="stage-number">4</div>
+                                <div class="stage-details">
+                                    <h4>АДАПТАЦИЯ И ПРАВКИ</h4>
+                                    <p>ДОРАБОТКА ДИЗАЙНА И АДАПТАЦИЯ ПОД РАЗНЫЕ УСТРОЙСТВА БЕСПЛАТНЫЕ 5 ПРАВОК</p>
+                                </div>
+                            </li>
+                        </ol>
+                    </div>
+                    <a href="#" class="btn-next-wrapper">
+                        <span class="btn-next-text">ДАЛЬШЕ</span>
+                        <div class="btn-next-arrow"></div>
+                    </a>
+                </div>
 
-  <footer class="site-footer">
-    <div class="container">
-    </div>
-  </footer>
-  <script src="./script.js"></script>
+                <div class="discussion-cta">
+                    <p>ЗАКЛЮЧИМ ОФИЦИАЛЬНЫЙ ДОГОВОР</p>
+                    <a href="#section-footer" class="btn btn-primary">ОБСУДИМ?</a>
+                    <p>ПРОВЕДЁМ БЕСПЛАТНЫЙ АУДИТ</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="section-projects" class="projects-section">
+        <div class="container projects-container">
+            <h2 class="projects-title">ПРОЕКТЫ</h2>
+            <div class="projects-grid">
+                <a href="#" class="project-card"></a>
+                <a href="#" class="project-card"></a>
+                <a href="#" class="project-card project-card-large"></a>
+            </div>
+            <div class="projects-cta">
+                <a href="#" class="btn btn-secondary">ВСЕ РАБОТЫ</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="section-testimonials" class="testimonials-section">
+        <div class="container testimonials-container">
+            <h2 class="testimonials-title">ОТЗЫВЫ</h2>
+            <div class="testimonials-grid">
+                <!-- Повторяющиеся карточки -->
+                <!-- Вставлены все карточки отзыва как в оригинале -->
+                <!-- Пример одной карточки: -->
+                <div class="testimonial-card">
+                    <div class="testimonial-avatar">
+                        <div class="avatar-shape"></div>
+                        <div class="avatar-check">
+                            <img src="/page/.../43_300.svg" alt="" style="position: absolute; top: 0; left: 0;">
+                            <img src="/page/.../43_301.svg" alt="" style="position: absolute; top: 17px; left: 17px;">
+                            <img src="/page/.../43_303.svg" alt="" style="position: absolute; top: 18px; left: 15px;">
+                        </div>
+                    </div>
+                    <div class="testimonial-content">
+                        <h3>АНАСТАСИЯ ЧЕРНЫШЕВА</h3>
+                        <h4>ВЛАДЕЛЕЦ: WXCXW BRAND</h4>
+                        <p>ЛУЧШАЯ СТУДИЯ! ...</p>
+                    </div>
+                </div>
+                <!-- и т.д. -->
+            </div>
+        </div>
+    </section>
+
+    <footer id="section-footer" class="site-footer">
+        <div class="container footer-container">
+            <div class="footer-header">
+                <h2 class="footer-title">У ВАС ЕСТЬ ПРОЕКТ?</h2>
+                <p class="footer-subtitle">ОСТАВЬТЕ ЗАЯВКУ ЗДЕСЬ</p>
+            </div>
+            <div class="footer-content">
+                <div class="contact-form-wrapper">
+                    <h3>ЗАПОЛНИТЕ ФОРМУ</h3>
+                    <form class="contact-form">
+                        <div class="form-group">
+                            <input type="text" id="name" name="name" required placeholder="ИМЯ">
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" id="phone" name="phone" required placeholder="НОМЕР">
+                        </div>
+                        <div class="form-group-checkbox">
+                            <input type="checkbox" id="consent" name="consent" checked>
+                            <label for="consent">СОГЛАСИЕ НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary form-submit-btn">ЖДУ ЗВОНКА</button>
+                        <p class="form-note">В ТЕЧЕНИИ ДНЯ С ВАМИ СВЯЖЕТСЯ НАШ МЕНЕДЖЕР</p>
+                    </form>
+                </div>
+                <div class="contact-info">
+                    <div class="info-text">
+                        <p><strong>АДРЕС:</strong><br>Г. ПЕРМЬ, УЛ. ПЕТРОПАВЛОВСКАЯ, 50.</p>
+                        <p><strong>РЕЖИМ РАБОТЫ:</strong><br>ПН - ПТ: 10:00 - 22:00</p>
+                    </div>
+                    <div class="social-links">
+                        <p><strong>СОЦ. СЕТИ</strong></p>
+                        <a href="#"><img src="/page/.../43_258.svg" alt="Telegram"> ТЕЛЕГРАМ</a>
+                        <a href="#"><img src="/page/.../43_287.svg" alt="Chat Bot"> ЧАТ БОТ</a>
+                    </div>
+                    <img src="/page/.../51e6dacfe11c01812f22715a4122dfdec9e2fd34.png" alt="Eagle illustration"
+                        class="footer-image">
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>WEIXCE DESIGN<br>© 2025 ИП МУКМИНОВ АЙНУР РАЛИТОВИЧ</p>
+                <p>ВСЕ ПРАВА ЗАЩИЩЕНЫ.</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
